--- a/src/components/UI/Header/MobileMenu/style.module.scss
+++ b/src/components/UI/Header/MobileMenu/style.module.scss
@@ -5,6 +5,7 @@
   height: calc(100vh - 62px);
   background-color: #fff;
   width: 100%;
+  overflow-x: hidden;
   z-index: 99;
   transition: all 0.4s ease-in-out;
   transform: translateY(-94vh);
@@ -49,6 +50,8 @@
     &.active {
       transform: translateX(0);
       opacity: 1;
+      overflow-x: hidden;
+      max-width: 100%;
     }
   }
 }
