--- a/src/components/UI/Header/style.module.scss
+++ b/src/components/UI/Header/style.module.scss
@@ -7,6 +7,8 @@
   top: 0;
   right: 0;
   z-index: 999;
+  overflow-x: hidden;
+  width: 100%;
   transition: all 0.4s ease-in-out;
   background: #f7f7f7;
   border-bottom: 1px solid #cfcfcf;
@@ -73,6 +75,8 @@
 }
 
 .rectangle {
+  max-width: 100%;
+  overflow-x: hidden;
   height: 80px;
   @media screen and (max-width: 820px) {
     height: 62px;
